fix mobile header spacing (above Home)

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -67,7 +67,6 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 500px;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -89,6 +88,7 @@
     width: 100%;
     display: table;
   }
+
   .nav-links:hover {
     background-color: #7577fa;
     border-radius: 0;
